# gai-helpers

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
extra_scripts/: parse_jira_tickets.py
gai-helpers/: __init__.py  app.py  chatbot.py  layout.py
notebooks/: parse_jira_tickets.ipynb  put_things_in_weaviate.ipynb
src/: app.py  chatbot.py
src/.streamlit/: config.toml
