[project]
name = "docuchat"

# Specify the Python version and dependency management
[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.25.0"
weaviate-client = "^3.7.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.0"
ruff = "^0.0.272"

# Optional: additional scripts or commands for ease of development
[tool.poetry.scripts]
start = "streamlit run src/app.py"

# Build system configuration (specify build backend like poetry or setuptools)
[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.core.masonry.api"